Fix grid and keyboard spacing on mobile (mostly)

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+}
